--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^1.0.15",
+    "@ai-sdk/openai": "^2.0.27",
     "@clerk/nextjs": "^6.31.9",
+    "@openai/agents": "^0.1.1",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.34.1",
+    "ai": "^5.0.39",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -24,7 +29,8 @@
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
-    "three-globe": "^2.44.0"
+    "three-globe": "^2.44.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
