Update: pdf extraction issue persists

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/deepseek": "^1.0.15",
     "@ai-sdk/openai": "^2.0.27",
     "@clerk/nextjs": "^6.31.9",
+    "@napi-rs/canvas": "^0.1.56",
     "@openai/agents": "^0.1.1",
     "@pinecone-database/pinecone": "^6.1.2",
     "@radix-ui/react-slot": "^1.2.3",
@@ -20,6 +21,7 @@
     "@tabler/icons-react": "^3.34.1",
     "@types/xlsx": "^0.0.35",
     "ai": "^5.0.39",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -27,9 +29,12 @@
     "motion": "^12.23.12",
     "next": "15.5.2",
     "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.0.5",
+    "pdfjs-dist": "^3.11.174",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
+    "tesseract.js": "^5.1.1",
     "three": "^0.180.0",
     "three-globe": "^2.44.0",
     "xlsx": "^0.18.5",
@@ -38,7 +43,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.14",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
