--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.34.1",
+    "@types/react-window": "^1.8.8",
     "@types/xlsx": "^0.0.35",
     "ai": "^5.0.39",
     "canvas": "^3.2.0",
@@ -35,6 +36,7 @@
     "pdfjs-dist": "^3.11.174",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-window": "^2.1.1",
     "tailwind-merge": "^3.3.1",
     "tesseract.js": "^5.1.1",
     "three": "^0.180.0",
