--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "three-globe": "^2.44.0",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
