--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+36677411_SKAMZUS0065074839
 #knowledgebase 
 .venv
 Knowledgebase.xlsx
