--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+samples
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 36677411_SKAMZUS0065074839
 #knowledgebase 
