--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "shadcn": "^3.8.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
